# get_JMA_tb

./: .gitignore  README.md  pyproject.toml
get_jma_tb/: _settings.yaml  df_type_conv.py  get_tb.py  jma_no.yaml  kanazawa_csv_dl.py  nigata_csv_dl.py  settings.py  write_db.py
tests/: test_get_jma_tb.py
