[tool.poetry]
name = "get_JMA_tb"
version = "0.1.0"
description = ""
authors = ["cfdtirej <53041956+cfdtirej@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
numpy = "^1.21.0"
requests = "^2.25.1"
lxml = "^4.6.3"
html5lib = "^1.1"
beautifulsoup4 = "^4.9.3"
influxdb = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
